k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsu-demo-devops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsu-demo-devops
  template:
    metadata:
      labels:
        app: devsu-demo-devops
    spec:
      containers:
      - name: devsu-demo-devops
        image: christiancarpio2210/devsu-demo-devops-java:__IMAGE_TAG__
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 10
