k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsu-demo-devops-ingress
  annotations:
    ngixx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: devops.local
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: devsu-demo-devops-service
                port:
                  number: 80
